# pandas-virtual-column-task

./: .gitignore  README.md  pyproject.toml  solution.py  test_virtual_column.py
