[project]
name = "pandas-virtual-column-task"
version = "0.1.0"
description = "A utility to add summation-based virtual columns to DataFrames"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"